[package]
name = "inetnum-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.inetnum]
path = ".."

[[bin]]
name = "parse_asn"
path = "fuzz_targets/parse_asn.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_asn16"
path = "fuzz_targets/parse_asn16.rs"
test = false
doc = false
bench = false
